# Flash-Attention-PTX-CUDA

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
docs/: flash_attention_story.html
include/: activation_kernels.h  flash_attention.h  forge_loader.h  gemm_operations.h  layer_norm.h  rotary_embedding.h  sampler.h  tensor.h  tokenizer.h  transformer_config.h
kernels/: README.md  activation_kernels.cu  flash_attention.cu  fp8_quantize.cu  fused_layernorm.cu  gemm_v1.cu  rotary_embedding.cu
scripts/: convert.py  perf_data.csv  transquery.py  transquery2.py  transquery3.py  visualize.py
src/: bench.cu  bench_critical_path.cu  bench_fp8.cu  demo.cu  main.cu  main_inference.cu  train_lmhead.cu  transformer.cu  transformer_block.cu
